--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "buildCommand": "cd client && npm install && npm run build",
   "outputDirectory": "client/dist",
-  "framework": null,
-  "installCommand": "npm install"
+  "framework": "vite",
+  "installCommand": "npm install --prefix client"
 }
